Fix gtk_paned_set_position to set position_set consistently

As pointed out in https://bugzilla.gnome.org/show_bug.cgi?id=765676,
we were failing to set position_set if the position did not change.